<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layoutMargin"
    tools:context=".ClientDetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/client_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/client_name_label"
        style="@style/Widget.Examen.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/nombreDetails"
        app:layout_constraintStart_toEndOf="@id/client_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/client_name"
        style="@style/Widget.Examen.Body"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"

        android:text="@string/nombreDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/client_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/client_address_label"
        style="@style/Widget.Examen.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/direccion_details"
        app:layout_constraintStart_toEndOf="@id/client_photo"
        app:layout_constraintTop_toBottomOf="@id/client_name" />

    <TextView
        android:id="@+id/client_address"
        style="@style/Widget.Examen.Body"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/direccion_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/client_address_label"
        app:layout_constraintTop_toBottomOf="@id/client_name" />

    <TextView
        android:id="@+id/client_phone_label"
        style="@style/Widget.Examen.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/telefono_details"
        app:layout_constraintStart_toEndOf="@id/client_photo"
        app:layout_constraintTop_toBottomOf="@id/client_address" />

    <TextView
        android:id="@+id/client_phone"
        style="@style/Widget.Examen.Body"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/telefono_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/client_phone_label"
        app:layout_constraintTop_toBottomOf="@id/client_address" />

    <TextView
        android:id="@+id/client_email_label"
        style="@style/Widget.Examen.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/correo_details"
        app:layout_constraintStart_toEndOf="@id/client_photo"
        app:layout_constraintTop_toBottomOf="@id/client_phone" />

    <TextView
        android:id="@+id/client_email"
        style="@style/Widget.Examen.Body"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="wrap"
        app:layout_constraintWidth_max="wrap"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/correo_details"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/client_email_label"
        app:layout_constraintTop_toBottomOf="@id/client_phone" />

    <Button
        android:id="@+id/edit_client"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layoutMargin"
        android:text="@string/edit"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/client_email" />

    <Button
        android:id="@+id/delete_client"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layoutMargin"
        android:text="@string/delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_client" />

</androidx.constraintlayout.widget.ConstraintLayout>